<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    app:cardBackgroundColor="@color/card_view_background">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewGoods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="57dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/goodsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:gravity="top"
            android:text="@string/goods_name"
            android:textColor="@color/title_white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewGoods"
            app:layout_constraintTop_toTopOf="@+id/imageViewGoods" />

        <TextView
            android:id="@+id/goodsDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:gravity="top"
            android:text="@string/goods_description"
            android:textColor="@color/description_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewGoods"
            app:layout_constraintTop_toBottomOf="@+id/goodsTitle" />

        <TextView
            android:id="@+id/goodsPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="28dp"
            android:gravity="top"
            android:text="@string/price"

            android:textColor="@color/price_count_white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewGoods"
            app:layout_constraintTop_toBottomOf="@+id/goodsDescription" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="41dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/round_button_minus"
            android:text="@string/text_btn_minus"
            android:textColor="@color/title_white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/goodsPrice"
            app:layout_constraintTop_toBottomOf="@+id/goodsDescription" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/round_button_plus"
            android:gravity="center"
            android:text="@string/text_btn_plus"
            android:textColor="@color/title_white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnMinus"
            app:layout_constraintTop_toBottomOf="@+id/goodsDescription" />

        <TextView
            android:id="@+id/goodsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="17dp"
            android:gravity="top"
            android:text="@string/amount_of_goods"
            android:textColor="@color/price_count_white"
            app:layout_constraintBottom_toBottomOf="@+id/btnMinus"
            app:layout_constraintEnd_toStartOf="@+id/btnPlus"
            app:layout_constraintStart_toEndOf="@+id/btnMinus"
            app:layout_constraintTop_toTopOf="@+id/btnPlus" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>